--- a/stylesheets/data/course.html
+++ b/stylesheets/data/course.html
@@ -1,2 +1,3 @@
 <a href="Special-Topics-in-Computer-Technology-II.html" target="_blank">Special Topics in Computer Technology II</a><br/>
-<a href="Technical-Subject-Teaching-Methods.html" target="_blank">Technical Subject Teaching Methods</a>
+<a href="Technical-Subject-Teaching-Methods.html" target="_blank">Technical Subject Teaching Methods</a><br/>
+<a href="Electronic-Devices-for-Computer.html" target="_blank">Electronic Devices for Computer</a>
