--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                         <p>{ template:
                         <a href="stylesheets/data/course.html" style="color:Cyan" target="_blank">ข้อมูลวิชา</a> &nbsp;&bull;&nbsp;
                         <a href="stylesheets/data/about.html" style="color:Cyan" target="_blank">ประวัติผู้สอน</a> &nbsp;&bull;&nbsp;
-                        <a href="stylesheets/data/download.html" style="color:Cyan" target="_blank">คลังดาวน์โหลด</a>
+                        <a href="stylesheets/data/download.html" style="color:Cyan" target="_blank">คลังดาวน์โหลด</a> &nbsp;&bull;&nbsp;
+                        <a href="stylesheets/data/logo.html" style="color:Cyan" target="_blank">รูปภาพ/โลโก้ประกอบ</a>
                          }</p>
 						<nav>
 							<ul>
