--- a/stylesheets/data/logo.html
+++ b/stylesheets/data/logo.html
@@ -1,3 +1,7 @@
-<a href="http://image.free.in.th/v/2013/iq/151106102831.png"><img src="http://image.free.in.th/v/2013/iq/151106102831.png" height="200"/></a>
-<br/>
-<a href="http://image.free.in.th/v/2013/ih/151106102938.png"><img src="http://image.free.in.th/v/2013/ih/151106102938.png" height="200"/></a>
+<a href="http://image.free.in.th/v/2013/iq/151106102831.png">
+  <img src="http://image.free.in.th/v/2013/iq/151106102831.png" height="200"/>
+</a>
+
+<a href="http://image.free.in.th/v/2013/ih/151106102938.png">
+  <img src="http://image.free.in.th/v/2013/ih/151106102938.png" height="200"/>
+</a>
