--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<h1>Google Site Training</h1>
 						<p>Computer Technology &nbsp;&bull;&nbsp; Technical Education &nbsp;&bull;&nbsp; KMUTNB</p>
                         <p>{ template:
+                        <a href="https://sites.google.com/site/sitetraining2015kmutnb/" style="color:Cyan" target="_blank">เว็ปไซต์ตัวอย่าง</a> &nbsp;&bull;&nbsp;
                         <a href="stylesheets/data/course.html" style="color:Cyan" target="_blank">ข้อมูลวิชา</a> &nbsp;&bull;&nbsp;
                         <a href="stylesheets/data/about.html" style="color:Cyan" target="_blank">ประวัติผู้สอน</a> &nbsp;&bull;&nbsp;
                         <a href="stylesheets/data/download.html" style="color:Cyan" target="_blank">คลังดาวน์โหลด</a> &nbsp;&bull;&nbsp;
