--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://sites.google.com/site/kmutnb025/" />
+<meta http-equiv="refresh" content="0; url=https://sites.google.com/site/kmutnb0257" />
 </head>
 </html>
